Fix line alignment in listings display

--- a/Frontend/src/components/App.css
+++ b/Frontend/src/components/App.css
@@ -81,6 +81,16 @@
 
 }
 
+.modeLimit{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+            line-clamp: 1; 
+    -webkit-box-orient: vertical;
+
+}
+
 #outlined-number{
     padding-right: 50px;
     
